force-app/main/default/objects/NivelesPbModular__c/NivelesPbModular__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>TarifasOrigen</label>
</CustomObject>