force-app/main/default/objects/NivelesPbModular__c/fields/Actividad__c.field-meta.xml
<CustomField>
    <fullName>Actividad__c</fullName>
    <label>Sub-actividad</label>
    <length>50</length>
    <type>Text</type>
</CustomField>