force-app/main/default/objects/NivelesPbModular__c/fields/NombreTarifa__c.field-meta.xml
<CustomField>
    <fullName>NombreTarifa__c</fullName>
    <label>NombreTarifa</label>
    <length>50</length>
    <type>Text</type>
</CustomField>