force-app/main/default/objects/NivelesPbModular__c/fields/Precio_E_Kg__c.field-meta.xml
<CustomField>
    <fullName>Precio_E_Kg__c</fullName>
    <label>Precio €/Kg</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>