force-app/main/default/objects/NivelesPbModular__c/fields/Precio_E_l__c.field-meta.xml
<CustomField>
    <fullName>Precio_E_l__c</fullName>
    <label>Precio €/l</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>