force-app/main/default/objects/NivelesPbModular__c/listViews/Tarifas.listView-meta.xml
<ListView>
    <fullName>Tarifas</fullName>
    <columns>NAME</columns>
    <columns>NombreTarifa__c</columns>
    <columns>Origen__c</columns>
    <columns>Precio_E_Kg__c</columns>
    <columns>Precio_E_l__c</columns>
    <columns>Actividad__c</columns>
    <columns>Activo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tarifas</label>
    <language>es</language>
</ListView>